[gd_scene load_steps=2 format=3 uid="uid://c6p1ojkslh4ss"]

[ext_resource type="Script" path="res://scripts/attribute_panel.gd" id="1_7epo4"]

[node name="AttributePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7epo4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0.501961, 0.560784, 0.505882)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryGroup" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/InventoryGroup"]
layout_mode = 2
text = "Inventory:"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/InventoryGroup"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.1037, 0.15232, 0.17, 0.552941)

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/InventoryGroup/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Inventory" type="VBoxContainer" parent="HBoxContainer/InventoryGroup/ColorRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Example" type="Label" parent="HBoxContainer/InventoryGroup/ColorRect/ScrollContainer/Inventory"]
visible = false
layout_mode = 2
size_flags_vertical = 6
text = "Item 1"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Info" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.75

[node name="AdInfo" type="VBoxContainer" parent="HBoxContainer/Info"]
layout_mode = 2

[node name="BelongTo" type="Label" parent="HBoxContainer/Info/AdInfo"]
layout_mode = 2
text = "Belong To: "

[node name="Type" type="Label" parent="HBoxContainer/Info/AdInfo"]
layout_mode = 2
text = "Type:"

[node name="NeedsGroup" type="VBoxContainer" parent="HBoxContainer/Info"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Info/NeedsGroup"]
layout_mode = 2
text = "Needs:"

[node name="NeedList" type="VBoxContainer" parent="HBoxContainer/Info/NeedsGroup"]
layout_mode = 2

[node name="Need" type="HBoxContainer" parent="HBoxContainer/Info/NeedsGroup/NeedList"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Info/NeedsGroup/NeedList/Need"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Energy : "

[node name="Progress" type="ProgressBar" parent="HBoxContainer/Info/NeedsGroup/NeedList/Need"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
value = 0.5

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Info"]
layout_mode = 2

[node name="PlansGroup" type="VBoxContainer" parent="HBoxContainer/Info"]
layout_mode = 2
size_flags_vertical = 3

[node name="CurrentAction" type="Label" parent="HBoxContainer/Info/PlansGroup"]
layout_mode = 2
text = "Action: SleepInBed->Goto"

[node name="PlanScoreTitle" type="Label" parent="HBoxContainer/Info/PlansGroup"]
layout_mode = 2
text = "Plan Scores:"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Info/PlansGroup"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.101961, 0.152941, 0.168627, 0.552941)

[node name="PlanScore" type="VBoxContainer" parent="HBoxContainer/Info/PlansGroup/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="AdPlans" type="VBoxContainer" parent="HBoxContainer/Info"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Info/AdPlans"]
layout_mode = 2
text = "Offered Plans:"

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer/Info/AdPlans"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.101961, 0.152941, 0.168627, 0.552941)

[node name="AdScore" type="VBoxContainer" parent="HBoxContainer/Info/AdPlans/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
grow_horizontal = 2
grow_vertical = 2
